@@ -217,6 +217,16 @@ libspectrum_tape_read( libspectrum_tape *tape, const libspectrum_byte *buffer,
   case LIBSPECTRUM_ID_TAPE_CSW:
     error = libspectrum_csw_read( tape, buffer, length ); break;
 
+  case LIBSPECTRUM_ID_TAPE_WAV:
+#ifdef HAVE_LIB_AUDIOFILE
+    error = libspectrum_wav_read( tape, filename ); break;
+#else     /* #ifdef HAVE_LIB_AUDIOFILE */
+    error = LIBSPECTRUM_ERROR_LOGIC;
+    libspectrum_print_error( LIBSPECTRUM_ERROR_LOGIC,
+			     "libspectrum_tape_read: format not supported without libaudiofile" );
+    break;
+#endif    /* #ifdef HAVE_LIB_AUDIOFILE */
+
   default:
     libspectrum_print_error( LIBSPECTRUM_ERROR_CORRUPT,
 			     "libspectrum_tape_read: not a tape file" );
